--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,6 +9,12 @@ table {
   width: 100%;
 }
 
+
+// hide cnzz icon
+#cnzz_stat_icon_1254773847 {
+  display: none;
+}
+
 // basic skeleton
 body .window {
   height: 100%;
