--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -42,6 +42,22 @@ body .window {
   }
 }
 
+.page-loading {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    padding: 15px;
+    background: #666;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    opacity: 0.9;
+    color: #FFF;
+    text-align: center;
+    z-index: 19;
+    margin: -30px 0 0 -30px;
+}
+
 // off-canvas
 ul.off-canvas-list {
   li.divider {
