--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,6 +5,15 @@
 
 // common
 
+body{
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 table {
   width: 100%;
 }
