--- a/app/views/console_table.html
+++ b/app/views/console_table.html
@@ -1,5 +1,27 @@
 <tabset>
   <tab heading="餐桌">
+    <button class="button" ng-click="add_table()">
+      <i class="fi-plus"></i> 添加/批量添加
+    </button>
+    <table>
+      <thead>
+        <tr>
+          <th width="150">桌号</th>
+          <th width="200">类型</th>
+          <th width="150">操作</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr ng-repeat="i in [1, 2]">
+          <td>A12</td>
+          <td>小桌1-2人</td>
+          <td>
+            <button class="button tiny" ng-click="edit(table_type)">编辑</button>
+            <button class="button tiny" ng-click="">删除</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </tab>
   <tab heading="类型">
     <button class="button" ng-click="add()">
@@ -60,6 +82,46 @@
           <div class="small-9 columns">
             <input type="number" id="type_max" ng-model="type_form.max_seats" number="true">
             <small class="error" ng-show="type_form.min_seats > type_form.max_seats">最多就餐人数必须大于最少就餐人数</small>
+          </div>
+        </div>
+      </div>
+    </div>
+  </form>
+
+  <hr>
+
+  <div class="button-group">
+    <button class="button" ng-click="confirm()" ng-disabled="type_form.name=='' ||
+                type_form.min_seats > type_form.max_seats ||
+                type_form.min_seats==null ||
+                type_form.max_seats==null">确认</button>
+    <button class="button secondary" ng-click="cancel()">取消</button>
+  </div>
+
+</script>
+
+<script type="text/ng-template" id="add_table.html">
+  <form>
+    <div class="row">
+      <div class="small-8 columns">
+        <div class="row">
+          <div class="small-3 columns">
+            <label for="table_num" class="right inline">餐桌编号</label>
+          </div>
+          <div class="small-9 columns">
+            <input type="text" id="table_num" ng-model="table_num.name">
+          </div>
+        </div>
+        <div class="row">
+            <div class="small-9 small-offset-3 columns">
+                按以下规则，可进行批量添加：AB[1-2]C，会添加AB1C、AB2C两个餐桌</div>
+            </div>
+        <div class="row">
+          <div class="small-3 columns">
+            <label for="table_type" class="right inline">餐桌类型</label>
+          </div>
+          <div class="small-9 columns">
+            <select id="" name="table_type" ng-model="table_type_type" ng-options="name as type.name for type in [{name: 'table type 1'}, {name: 'table type 2'}]"></select>
           </div>
         </div>
       </div>
