--- a/app/views/console_menu.html
+++ b/app/views/console_menu.html
@@ -21,12 +21,12 @@
         <tbody>
         <tr ng-repeat="product in category_products">
             <td><img ng-src="product.img_key" alt=""></td>
-            <td>{{ product.description}}</td>
+            <td>{{ product.description }}</td>
             <td>{{ product.price }}</td>
             <td>{{ product.unit }}</td>
             <td>
                 <button class="button tiny" ng-click="">编辑</button>
-                <button class="button tiny" ng-click="">删除</button>
+                <button class="button tiny" ng-click="del_product(product.id)">删除</button>
             </td>
         </tr>
         </tbody>
@@ -34,3 +34,14 @@
     </tab>
     <tab heading="+添加新分类" select="menu_new()"></tab>
 </tabset>
+
+<script type="text/ng-template" id="product_del.html">
+    <p>确认删除该商品吗？</p>
+    <hr>
+
+    <div class="button-group">
+        <button class="button" ng-click="confirm()">确认</button>
+        <button class="button secondary" ng-click="cancel()">取消</button>
+    </div>
+
+</script>
