--- a/app/views/console_menu.html
+++ b/app/views/console_menu.html
@@ -31,6 +31,7 @@
         </tr>
         </tbody>
     </table>
+    <button class="button expand" ng-click="create_product()">+添加新商品</button>
     </tab>
     <tab heading="+添加新分类" select="menu_new()"></tab>
 </tabset>
