edit product http post work

--- a/app/views/console_menu.html
+++ b/app/views/console_menu.html
@@ -57,7 +57,7 @@
             <label for="type_name" class="right inline">图片</label>
           </div>
           <div class="small-6 columns">
-            <input type="file" file-upload="product_img" id="type_name">
+            <input type="file" file-upload="product.img_file" id="type_name">
           </div>
           <div class="small-3 columns">
             <p>
