--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -398,3 +398,12 @@ table.current-registration {
   }
 }
 
+#console-menu {
+    .product-icon-wrapper {
+        text-align: center;
+        > img {
+            max-width: 50px;
+        }
+    }
+}
+
