del product work

--- a/app/views/console_menu.html
+++ b/app/views/console_menu.html
@@ -32,7 +32,7 @@
         </tr>
         </tbody>
       </table>
-      <button class="button expand" ng-click="create_product()">+添加新商品</button>
+      <button class="button expand" ng-click="create_product(category.id)">+添加新商品</button>
       </tab>
       <tab heading="+添加新分类" select="menu_new()"></tab>
   </tabset>
