edit table work

--- a/app/views/console_table.html
+++ b/app/views/console_table.html
@@ -16,7 +16,7 @@
           <td>{{ table.name }}</td>
           <td>{{ table.table_type }}</td>
           <td>
-            <button class="button tiny" ng-click="edit(table_type)">编辑</button>
+            <button class="button tiny" ng-click="edit_table(table)">编辑</button>
             <button class="button tiny" ng-click="">删除</button>
           </td>
         </tr>
