delete table type work

--- a/app/views/console_table.html
+++ b/app/views/console_table.html
@@ -43,6 +43,7 @@
           <td>{{ table_type.max_seats }}</td>
           <td>
             <button class="button tiny" ng-click="edit(table_type)">编辑</button>
+            <button class="button tiny" ng-click="del_table_type(table_type)">删除</button>
           </td>
         </tr>
       </tbody>
