--- a/app/views/console_table.html
+++ b/app/views/console_table.html
@@ -17,7 +17,7 @@
           <td>{{ table.table_type }}</td>
           <td>
             <button class="button tiny" ng-click="edit_table(table)">编辑</button>
-            <button class="button tiny" ng-click="">删除</button>
+            <button class="button tiny" ng-click="del_table(table)">删除</button>
           </td>
         </tr>
       </tbody>
