--- a/app/views/console.html
+++ b/app/views/console.html
@@ -32,18 +32,20 @@
     </section>
 
     <div class="dk-vertical-icon-bar icon-bar vertical three-up hide-for-small-only">
+
       <a class="item" ui-sref=".overview" ui-sref-active="active">
         <i class="fi-volume"></i>
         <label for="">叫号</label>
       </a>
-      <a class="item" ui-sref=".history" ui-sref-active="active">
-        <i class="fi-clock"></i>
-        <label for="">历史</label>
+      <a class="item" ui-sref=".order" ui-sref-active="active">
+        <i class="fi-graph-trend"></i>
+        <label for="">点菜</label>
       </a>
       <a class="item" ui-sref=".report" ui-sref-active="active">
         <i class="fi-graph-trend"></i>
         <label for="">统计</label>
       </a>
+
     </div>
 
     <div class="dk-icon-bar icon-bar three-up show-for-small-only">
