--- a/app/views/console_order.html
+++ b/app/views/console_order.html
@@ -1,19 +1,19 @@
 <section class="console-order">
   <ul class="tables">
     <li>
-      <a href="#" class="button tablet confirm">待确认</a>
+    <a href="#" class="button tablet confirm"><span>桌名(餐桌类型名称)<br>待确认</span></a>
     </li>
     <li>
-      <a href="#" class="button success tablet checkout">已付款</a>
+      <a href="#" class="button success tablet checkout"><span>已付款</span></a>
     </li>
     <li>
-      <a href="#" class="button secondary tablet pre-order">待下单</a>
+      <a href="#" class="button secondary tablet pre-order"><span>待下单</span></a>
     </li>
     <li>
-      <a href="#" class="button alert tablet pre-checkout">待付款</a>
+      <a href="#" class="button alert tablet pre-checkout"><span>待付款</span></a>
     </li>
     <li>
-      <a href="#" class="button info tablet dish-up">待上菜</a>
+      <a href="#" class="button info tablet dish-up"><span>待上菜</span></a>
     </li>
   </ul>
 </section>
