--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -412,13 +412,20 @@ table.current-registration {
         margin: 20px;
         > li {
             display: inline-block;
+            vertical-align: bottom;
+            > a {
+                display: table;
+                > span {
+                    display: table-cell;
+                    vertical-align: middle;
+                }
+            }
 
             .tablet {
                 width: 140px;
                 height: 100px;
                 padding: 0;
                 margin: 12px;
-                line-height: 100px;
             }
         }
     }
