order type filter

--- a/app/views/console_order.html
+++ b/app/views/console_order.html
@@ -1,7 +1,7 @@
 <section class="console-order">
   <ul class="tables">
     <li>
-    <a href="#" class="button tablet confirm"><span>桌名(餐桌类型名称)<br>待确认</span></a>
+    <a href="#" class="button tablet confirm"><span>桌名(餐桌类型名称)<br>{{ null | order_status}}</span></a>
     </li>
     <li>
       <a href="#" class="button success tablet checkout"><span>已付款</span></a>
