table order modal html

--- a/app/views/console_order.html
+++ b/app/views/console_order.html
@@ -23,10 +23,65 @@
 <script type="text/ng-template" id="table_order.html">
   <div class="row">
     <div class="small-6 columns">
-    <h1>{{ table.name }}</h1>
+    <h3>{{ table.name }}</h3>
     </div>
     <div class="small-6 columns">
-    <h1> {{ table.type }}</h1>
+    <h3>小桌不知道多少人</h3>
+    </div>
+  </div>
+  <div class="row">
+    <div class="small-12 columns">
+      <table>
+        <tr>
+          <th>分类</th>
+          <th>菜名</th>
+          <th>数量</th>
+          <th>单价</th>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </table>
+    </div>
+    <div class="row">
+      <div class="small-6 columns">
+      <h3>总价：X元</h3>
+      </div>
+      <div class="small-6 columns">
+      <h3>状态：待确认</h3>
+      </div>
+    </div>
+    <div class="row">
+      <div class="small-3 columns">待确认</div>
+      <div class="small-9 columns">
+        <div class="button-group">
+          <button class="button">确认菜单</button>
+          <button class="button">取消菜单</button>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="small-3 columns">待付款</div>
+      <div class="small-9 columns">
+        <div class="button-group">
+          <button class="button">已付款</button>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="small-12 columns">情况跟踪</div>
+    </div>
+    <div class="row">
+      <div class="small-12 columns">下单时间</div>
+    </div>
+    <div class="row">
+      <div class="small-12 columns">确认时间</div>
+    </div>
+    <div class="row">
+      <div class="small-12 columns">付款时间</div>
     </div>
   </div>
 </script>
