fix: logical error for create catogary of menu

--- a/app/views/console_menu.html
+++ b/app/views/console_menu.html
@@ -144,7 +144,7 @@
   <hr>
 
   <div class="button-group">
-    <button class="button" ng-disabled="category.name" ng-click="confirm()">确认</button>
+    <button class="button" ng-disabled="!category.name" ng-click="confirm()">确认</button>
     <button class="button secondary" ng-click="cancel()">取消</button>
   </div>
 </script>
